--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@legendapp/state": "^3.0.0-beta.4",
     "@react-navigation/native": "^6.1.17",
     "@tamagui/config": "^1.112.7",
     "@tamagui/lucide-icons": "^1.112.7",
     "@tamagui/toast": "^1.112.7",
+    "@tanstack/react-query": "^5.56.2",
     "babel-preset-expo": "^11.0.6",
     "burnt": "^0.12.2",
     "expo": "51.0.35",
     "expo-build-properties": "~0.12.5",
+    "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -34,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-mmkv": "^3.0.2",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
